src/test/fail/unterminated_single_line_if.ly
#[
SyntaxError: Expected a value, not 'end of file'.
Where: File "test/fail/unterminated_single_line_if.ly" at line 6
]#

if 1:
